--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "todolist",
+  "name": "todolist-v1",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "cyborg",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1"
-  }
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.17.1",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.3.4"
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
 }
